<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="app_name">SecureChat</string>
    <string name="app_description">SecureChat created by Students during a IT-Security Project at DHBW Heidenheim</string>
    <string name="action_showProfile">Show profile</string>
    <string name="action_addContact">Add contact</string>
    <string name="action_logout">Logout</string>
    <string name="button_send">Send</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_addContact">Add contact</string>
    <string name="button_proceed">Continue</string>
    <string name="button_send_private_key_to_server">Enable future logins and send private key to secured login server</string>
    
    <string name="edit_message">Enter a message&#8230;</string>
    <string name="label_id">ID</string>
    <string name="label_username">Nickname</string>
    <string name="insert_id">Insert contact ID here&#8230;</string>
    <string name="insert_username">Nickname</string>
    <string name="insert_password">Password</string>
    <string name="insert_password2">Repeat password</string>
    <string name="title_activity_contact_list">Contact list</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_add_contact">Add contact</string>
    <string name="title_section1">Login</string>
    <string name="title_section2">Register</string>
    <string name="title_activity_show_profile">My profile</string>
    <string name="title_areYouSure">Are you sure?</string>
    
    <string name="info_keep_key_private">Your private key stays on your device. 
        								\nThis guarantees maximal security. 
        								\nUnfortunately it is impossible to log in to this account again after a logout or data loss.</string>
    <string name="info_send_key_to_server">Your private key is sent to our server and stored there secured. 
        								\nTogether with your ID and password, you can always log in to your account again.</string>
    
    <string name="message_newMessage_from">%1$s has sent you a new message</string>
    <string name="message_newMessages_from">%1$s has sent you %2$s new messages</string>
    <string name="message_newMessage_from_unknown">You have received a new message from sender with the ID \""%1$s\""</string>
    <string name="message_newMessages_from_unknown">You have received %2$s new messages from sender with the ID \""%1$s\""</string>
    
    <string name="message_contact_not_exist">Error while fetching contact data!</string>
    <string name="message_encryption_error">Error during data encryption!</string>
    <string name="message_connection_failed">Server is currently not available. 
        					\nPlease check your internet connection and try again!</string>
    <string name="message_registered_success">You were registered successfully!
        									\nPlease remember your ID carefully!</string>
    <string name="message_login_success">You were logged in successfully!</string>
    <string name="message_logout">Please remember your ID &amp; Password carefully to log in again!
    						\n\nDo you really want to Logout now?</string>
    <string name="message_password_not_identical">The entered passwords are not identical!</string>
    <string name="message_wrong_login">Wrong user ID or password!</string>
    <string name="message_empty_login">Empty user ID or password!</string>
    <string name="message_empty_register">Empty user or password!</string>
    <string name="message_contact_added">The Contact \""%1$s\"" with ID \""%2$s\"" was added successfully!</string>
    <string name="message_contact_not_added">Error in adding contact with ID \""%1$s\""!</string>
    <string name="message_contact_already_in_list">The contact with ID \""%1$s\"" is already in your contactlist!</string>
    
    <string name="password_strength_very_very_weak">Very very weak password</string>
    <string name="password_strength_very_weak">Very weak password</string>
    <string name="password_strength_weak">Weak password</string>
    <string name="password_strength_moderate">Moderate password</string>
    <string name="password_strength_strong">Strong password</string>
    <string name="password_strength_very_strong">Very strong password</string>

</resources>
