<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.dhbw.heidenheim.wi2012.securechat.LoginActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="top"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="de.dhbw.heidenheim.wi2012.securechat.AddContactActivity" >
	    
    <TextView
        android:id="@+id/register_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/android_red_dark"
            android:lines="3"
            android:gravity="center"
    		android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/register_insert_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:layout_marginBottom="20dp"
        	android:singleLine="true"
            android:hint="@string/insert_username" >

            <requestFocus />
            
        </EditText>

    <TextView
        android:id="@+id/register_password_strength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        	android:singleLine="true"
        	android:padding="5dp"
            android:gravity="left"
    		android:layout_marginBottom="10dp" />
    
        <EditText
            android:id="@+id/register_insert_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:layout_marginBottom="20dp"
        	android:singleLine="true"
            android:hint="@string/insert_password"
            android:inputType="textPassword"  >

            <requestFocus />
            
        </EditText>

        <EditText
            android:id="@+id/register_insert_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:layout_marginBottom="20dp"
        	android:singleLine="true"
            android:hint="@string/insert_password2"
            android:inputType="textPassword"  >

            <requestFocus />
            
        </EditText>
    
	        <Button
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:onClick="userRegister"
	            android:text="@string/button_register"
	            android:textColor="@color/black" />

	</LinearLayout>

</RelativeLayout>
