<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
	    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="top"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin_x2"
	    android:paddingLeft="@dimen/activity_horizontal_margin_x2"
	    android:paddingRight="@dimen/activity_horizontal_margin_x2"
	    android:paddingTop="@dimen/activity_vertical_margin_x2"
	    tools:context="de.dhbw.heidenheim.wi2012.securechat.gui.AddContactActivity" >
	    
    <TextView
        	android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/android_green_dark"
            android:lines="3"
            android:gravity="center"
    		android:layout_marginBottom="20dp" />
        
        <TextView
    		android:id="@+id/show_username_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:layout_marginBottom="5dp"
    		android:textColor="@color/darkgrey"
        	android:text="@string/label_username" />
        <TextView
    		android:id="@+id/show_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:layout_marginBottom="25dp"
    		android:padding="10dp"
    		android:textSize="24sp"
    		android:background="@color/white"
    		android:textIsSelectable="true"
        	android:text="" />

        <TextView
    		android:id="@+id/show_id_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:layout_marginBottom="5dp"
    		android:textColor="@color/darkgrey"
        	android:text="@string/label_id" />
        <TextView
    		android:id="@+id/show_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:layout_marginBottom="25dp"
    		android:padding="10dp"
    		android:textSize="24sp"
    		android:background="@color/white"
    		android:textIsSelectable="true"
        	android:text="" />
        
        <Button
            android:id="@+id/button_proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
	        android:onClick="continueToContactList"
	        android:visibility="gone"
            android:layout_marginBottom="25dp"
            android:padding="10dp"
	        android:textColor="@color/black"
            android:text="@string/button_proceed" />

	</LinearLayout>
</ScrollView>
